--- a/url-shortener/templates/home.html
+++ b/url-shortener/templates/home.html
@@ -1,22 +1,6 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>URL Shortener</title>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-            crossorigin="anonymous">
-
-</head>
-
-<body>
-
-<main class="container">
-
+{% block main %}
     <h1>Hello, url-shortener!</h1>
 
     <div>
@@ -34,18 +18,4 @@
 
         </ul>
     </div>
-
-</main>
-
-
-<footer class="mt-3">
-    &copy; Gleb Kostousov {{ today.year }}
-</footer>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"
-></script>
-
-</body>
-</html>
+{% endblock %}
