--- a/url-shortener/templates/components/navbar.html
+++ b/url-shortener/templates/components/navbar.html
@@ -3,7 +3,7 @@
 
         <a
                 class="navbar-brand"
-                href="#"
+                href="/"
         >URL shortener</a>
 
         <button
@@ -29,15 +29,15 @@
                     <a
                             class="nav-link active"
                             aria-current="page"
-                            href="#"
+                            href="/"
                     >Home</a>
                 </li>
 
                 <li class="nav-item">
                     <a
                             class="nav-link"
-                            href="#"
-                    >Link</a>
+                            href="/about/"
+                    >About</a>
                 </li>
 
 
