--- a/url-shortener/templates/base.html
+++ b/url-shortener/templates/base.html
@@ -27,7 +27,7 @@
     {% include 'components/navbar.html' %}
 </header>
 
-<main class="container my-3">
+<main class="container my-3 pt-5">
     {% block main %}
     {% endblock %}
 </main>
