feat(short-urls-list) create new html

--- a/url-shortener/templates/components/navbar.html
+++ b/url-shortener/templates/components/navbar.html
@@ -1,6 +1,7 @@
 {# задаем имя ручки - Заголовок в навбаре #}
 {% set navigation = [
 ('home', 'Home'),
+('short-urls:list', 'Short URLs'),
 ('about', 'About'),
 ] %}
 
