feat(short-urls-list): add href to short-url

--- a/url-shortener/templates/short_urls/list.html
+++ b/url-shortener/templates/short_urls/list.html
@@ -22,10 +22,13 @@
         {% for url in short_urls %}
           <tr>
             <td><code> {{ url.slug }} </code></td>
-            <td>{{ url.target_url }}</td>
+            <td><a
+              href="{{ url.target_url }}"
+              target="_blank"
+            >{{ url.target_url }}</a></td>
             <td>
               {% if url.description %}
-              {{ url.description }}
+                {{ url.description }}
               {% else %}
                 <code>-</code>
               {% endif %}
