--- a/url-shortener/templates/short_urls/create.html
+++ b/url-shortener/templates/short_urls/create.html
@@ -23,8 +23,7 @@
           {{ form_field(
             field_name=field_name,
             field_schema=field_schema,
-            is_required=is_required)
-          }}
+            is_required=is_required) }}
 
         {% endfor %}
 
@@ -32,6 +31,13 @@
         <input type="submit" value="Create" class="btn btn-primary">
       </form>
     </div>
+  </div>
+
+  <div class="mt-3">
+    <a
+      href="{{ url_for('short-urls:list') }}"
+      class="btn btn-outline-secondary"
+    >To the short URLs list</a>
   </div>
 
 {% endblock %}
