--- a/url-shortener/templates/macro/form_field.html
+++ b/url-shortener/templates/macro/form_field.html
@@ -1,23 +1,52 @@
-{% macro form_field(field_name,field_schema,is_required) %}
-  <div class="mb-3">
+{% macro form_field(
+  field_name,
+  field_schema,
+  is_required=False,
+  value=None,
+  validated=False,
+  error=None) %}
+
+  <div class="mb-3 {% if validated %}has-validation{% endif %} ">
+
     <label
       for="{{ field_name }}"
       class="form-label"
     >{{ field_schema.title }}</label>
+
     <input
       id="{{ field_name }}"
       name="{{ field_name }}"
       type="text"
+
+      {% if validated %}
+      class="form-control {% if error %}is-invalid{% else %}is-valid {% endif %}"
+      {% else %}
       class="form-control"
-
-      {% if field_schema.get('minLength',None) %}
-      minLength="{{ field_schema.minLength }}"
       {% endif %}
 
-      {% if field_schema.maxLength %}
-      maxLength="{{ field_schema.get('maxLength',None) }}"
+      {% if field_schema.get('minLength') != None %}
+      minlength="{{ field_schema.minLength }}"
       {% endif %}
+
+      {% if field_schema.get('maxLength') != None %}
+      maxlength="{{ field_schema.maxLength }}"
+      {% endif %}
+
+      {% if value != None %}
+      value="{{ value }}"
+      {% endif %}
+
       {% if is_required %}required{% endif %}
     >
+
+    {% if validated %}
+      {% if error %}
+        <div class="invalid-feedback">
+          {{ error }}
+        </div>
+      {% endif %}
+    {% endif %}
+
   </div>
+
 {% endmacro %}
