--- a/url-shortener/templates/short_urls/create.html
+++ b/url-shortener/templates/short_urls/create.html
@@ -1,47 +1,21 @@
-{% from 'macro/form_field.html' import form_field %}
+{% from 'short_urls/macro/form.html' import render_form with context %}
 {% extends 'base.html' %}
 
 {% block title %}
-  Create new Short URL
+    Create new Short URL
 {% endblock %}
 
 
 
 {% block main %}
-  <h1>Create a new Short URL</h1>
+    <h1>Create a new Short URL</h1>
 
-  <div class="row">
-    <div class="col col-12 col-md-6 col-lg-4">
-      <form
-        action="{{ url_for('short-urls:create') }}"
-        method="post"
-      >
+    {{ render_form(
+            action = url_for('short-urls:create'),
+            button_text = 'Create'
+            ) }}
 
-        {% for field_name, field_schema in model_schema.properties.items() %}
-          {% set is_required = field_name in (model_schema.get('required')) or [] %}
-
-          {{ form_field(
-            field_name=field_name,
-            field_schema=field_schema,
-            value=form_data and form_data[field_name] or field_schema.default,
-            validated=form_validated,
-            error=errors and errors[field_name] or None,
-            is_required=is_required) }}
-
-        {% endfor %}
-
-
-        <input type="submit" value="Create" class="btn btn-primary">
-      </form>
-    </div>
-  </div>
-
-  <div class="mt-3">
-    <a
-      href="{{ url_for('short-urls:list') }}"
-      class="btn btn-outline-secondary"
-    >To the short URLs list</a>
-  </div>
+    {% include 'short_urls/components/back-to-list.html' %}
 
 
 {% endblock %}
