feat(update): add edit-button to each URL

--- a/url-shortener/templates/short_urls/components/edit.html
+++ b/url-shortener/templates/short_urls/components/edit.html
@@ -1,4 +1,4 @@
 <a
         class="btn  btn-outline-secondary"
-        href='#'
+        href='{{ url_for('short-urls:update-views',slug=slug) }}'
 >Edit</a>
