--- a/url-shortener/templates/short_urls/list.html
+++ b/url-shortener/templates/short_urls/list.html
@@ -7,6 +7,12 @@
 {% block main %}
 
     <h1>Short URLs list</h1>
+    {% if request.session.get("message") %}
+        <div class="alert alert-info">
+            {{ request.session.pop("message") }}
+        </div>
+
+    {% endif %}
 
 
     {% if short_urls %}
