--- a/url-shortener/templates/short_urls/list.html
+++ b/url-shortener/templates/short_urls/list.html
@@ -7,13 +7,11 @@
 {% block main %}
 
     <h1>Short URLs list</h1>
-    {% if request.session.get("message") %}
-        <div class="alert alert-info">
-            {{ request.session.pop("message") }}
+    {% for msg in get_flashed_message(request) %}
+        <div class="alert alert-{{ msg.category }}">
+            {{ msg.message }}
         </div>
-
-    {% endif %}
-
+    {% endfor %}
 
     {% if short_urls %}
         <div class="table-responsive">
