--- a/url-shortener/templates/short_urls/list.html
+++ b/url-shortener/templates/short_urls/list.html
@@ -7,7 +7,11 @@
 {% block main %}
 
     <h1>Short URLs list</h1>
-
+    {% for msg in get_flashed_message(request) %}
+        <div class="alert alert-{{ msg.category }}">
+            {{ msg.message }}
+        </div>
+    {% endfor %}
 
     {% if short_urls %}
         <div class="table-responsive">
